recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:4: error: '(' expected but '{' found.
{(steps == 0)}
^Spiral:10: error: illegal start of simple expression
}
^